--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "babel src -d lib",
     "publish": "npm run build && npm run publish"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:veeking/babel-plugin-miniapp-promise.git"
+  },
   "keywords": [
     "babel",
     "babel-plugin",
@@ -21,6 +25,6 @@
     "babel-types": "^6.26.0",
     "promise-polyfill": "^8.1.3"
   },
-  "author": "wangjinquan@hhdd.com",
+  "author": "veekingsen@163.com",
   "license": "ISC"
 }
