--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-template": "^6.26.0",
-    "babel-types": "^6.26.0",
+    "babel-types": "^6.26.0"
   },
   "author": "veekingsen@163.com",
   "license": "ISC"
